--- a/url-shortening/package.json
+++ b/url-shortening/package.json
@@ -1,46 +1,53 @@
 {
-  "name": "url-shortening",
+  "name": "template_webpack",
   "version": "1.0.0",
-  "description": "Url shortening landing page",
-  "main": "dist/index.html",
-  "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "autoprefixer": "^9.6.1",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.6",
-    "babel-polyfill": "^6.26.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^7.0.0",
-    "css-loader": "^3.1.0",
-    "file-loader": "^4.1.0",
-    "html-minimizer-webpack-plugin": "^2.1.0",
-    "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^1.3.4",
-    "postcss-loader": "^3.0.0",
-    "precss": "^4.0.0",
-    "sass": "^1.32.5",
-    "sass-loader": "^10.1.1",
-    "style-loader": "^0.23.1",
-    "terser-webpack-plugin": "^5.1.1",
-    "webpack": "^4.39.1",
-    "webpack-cli": "^3.3.6",
-    "webpack-dev-server": "^3.7.2"
-  },
-  "dependencies": {},
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/ic3top/Frontend-Mentor/tree/master/url-shortening"
-  },
-  "keywords": [
-    "API",
-    "JS"
-  ],
+  "description": "",
+  "main": "app.js",
   "scripts": {
-    "serve": "webpack-dev-server",
+    "dev": "webpack serve --mode development",
     "build": "webpack",
-    "start": "npx webpack --watch"
+    "watch": "webpack --watch",
+    "start": "webpack serve --open"
   },
-  "author": "ic3top < https://github.com/ic3top >",
-  "license": "ISC"
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@babel/core": "^7.14.3",
+    "@babel/preset-env": "^7.14.2",
+    "autoprefixer": "^10.2.5",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.2.2",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "css-loader": "^5.2.4",
+    "css-minimizer-webpack-plugin": "^3.0.0",
+    "file-loader": "^6.2.0",
+    "html-loader": "^2.1.2",
+    "html-webpack-plugin": "^5.3.1",
+    "image-minimizer-webpack-plugin": "^2.2.0",
+    "imagemin-gifsicle": "^7.0.0",
+    "imagemin-jpegtran": "^7.0.0",
+    "imagemin-optipng": "^8.0.0",
+    "imagemin-svgo": "^9.0.0",
+    "mini-css-extract-plugin": "^1.6.0",
+    "postcss": "^8.2.15",
+    "postcss-loader": "^5.3.0",
+    "sass": "^1.32.13",
+    "sass-loader": "^11.1.1",
+    "style-loader": "^2.0.0",
+    "stylelint": "^13.13.1",
+    "stylelint-config-standard": "^22.0.0",
+    "stylelint-webpack-plugin": "^2.1.1",
+    "webpack": "^5.37.0",
+    "webpack-cli": "^4.7.0",
+    "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "normalize-scss": "^7.0.1"
+  },
+  "browserslist": [
+    "defaults"
+  ]
 }
