--- a/countries-wiki/package.json
+++ b/countries-wiki/package.json
@@ -13,8 +13,7 @@
     "primeflex": "^2.0.0",
     "primeicons": "^4.1.0",
     "primevue": "^3.3.5",
-    "vue": "^3.0.0",
-    "vuex": "^4.0.0-0"
+    "vue": "^3.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
